--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,13 +2,16 @@
   margin:0;
   padding:0;
 }
+#section_issues-global {
+    margin-top: 40px;
+
+}
 .issue-global{
   height: 75px;
-  background-color: #8080801c;
-  margin: 10px;
-  padding: 10px;
+  padding: 15px;
   font-family: 'Open Sans', sans-serif;
   cursor: pointer;
+  border-top:1px solid grey;
 }
 .issue-global:hover{
     background-color: #80808036;
@@ -18,12 +21,17 @@
   width: 30px;
   height: 30px;
   float:left;
+  margin-top: 22px;
+  margin-right:20px;
 }
 
 .issue-global .issue_cabecera{
     float:left;
-    width: 40%;
+    width: 37%;
+    border-right: 1px solid #8080805e;
+    height: 100%;
 }
 .issue_cabecera h3{
-    font-size: 18px;
+    font-size: 17px;
+    margin-top: 13px;
 }
